# adjacent_for_each

./: CMakeLists.txt  README.md
boost/algorithm/: adjacent_for_each.hpp
libs/algorithm/example/: adjacent_for_each_example.cpp
libs/algorithm/test/: adjacent_for_each_test.cpp
